--- a/deploy/argocd/kustomization.yaml
+++ b/deploy/argocd/kustomization.yaml
@@ -7,5 +7,10 @@ resources:
   - namespace.yaml
   - https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
   - ingress.yaml
+  ## generate repository only first time
+  ## and comment out for ArgoCD
+  #- repository.yaml 
+  - application.yaml
+
 patchesStrategicMerge:
   - argocd-cmd-params-cm-patch.yml
